# example-opentelemetry-actix-web

./: Cargo.toml  README.md  docker-compose.yaml  otel-collector-config.yaml
src/: main.rs
