[package]
name = "example-opentelemetry-actix-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", features = ["full"] }
actix-web = "4"
opentelemetry = { version = "0.19.0", default-features = false, features = [
  "rt-tokio",
  "trace",
] }
opentelemetry-otlp = { version = "*", features = [
  "reqwest-client",
  "http-proto",
] }
tracing = "*"
tracing-actix-web = { version = "*", features = ["opentelemetry_0_19"] }
tracing-opentelemetry = "*"
tracing-subscriber = { version = "*", features = ["env-filter", "registry"] }
reqwest = { version = "*", features = ["json"] }
